--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "hash-sum": "^2.0.0",
     "next": "14.1.4",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/hash-sum": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
