--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
